--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --env-file=.env.example --watch --allow-net --allow-env --allow-read main.ts",
-    "test": "deno test --env-file=.env.example --allow-net --allow-env --allow-read"
+    "test": "deno test --env-file=.env.example --allow-net --allow-env --allow-read --allow-write"
   },
   "imports": {
     "@hono/hono": "jsr:@hono/hono",
