--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ PORT=8000
 MANAGEMENT_API_KEY=your-secret-key-here
 # Log level: debug, info, warn, error, none (default: info)
 LOG_LEVEL=info
+# Metrics aggregation interval in seconds (default: 60)
+METRICS_AGGREGATION_INTERVAL_SECONDS=60
+# Number of days to retain daily metrics (default: 90)
+METRICS_RETENTION_DAYS=90
