--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - MANAGEMENT_API_KEY=examplekey
       # Log level: debug, info, warn, error, none (default: info)
       - LOG_LEVEL=info
+      # Metrics aggregation interval in seconds (default: 60)
+      - METRICS_AGGREGATION_INTERVAL_SECONDS=60
+      # Number of days to retain daily metrics (default: 90)
+      - METRICS_RETENTION_DAYS=90
     volumes:
       # Mount the data directory for SQLite database
       - ./data:/app/data
