--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --env-file=.env.example --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi main.ts",
-    "test": "deno test --env-file=.env.example --allow-net --allow-env --allow-read --allow-write --allow-ffi"
+    "dev": "deno run --env-file=.env --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi main.ts",
+    "test": "deno test --env-file=.env --allow-net --allow-env --allow-read --allow-write --allow-ffi"
   },
   "imports": {
     "@hono/hono": "jsr:@hono/hono",
