Logs and metrics (#5)
* Implement logs (v1)

* Make logs table more functional

* Working metrics logging

* Updating functions without changing id is now possible

* Metrics aggregation v1

* Fix metrics bugs

* Fix .env file read

* Logging page fixes and paging

* Fix linting issues

* Fix bugs and tests

* More fixes

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@ PORT=8000
 MANAGEMENT_API_KEY=your-secret-key-here
 # Log level: debug, info, warn, error, none (default: info)
 LOG_LEVEL=info
+# Metrics aggregation interval in seconds (default: 60)
+METRICS_AGGREGATION_INTERVAL_SECONDS=60
+# Number of days to retain daily metrics (default: 90)
+METRICS_RETENTION_DAYS=90
+# Log trimming interval in seconds (default: 300 = 5 minutes)
+LOG_TRIMMING_INTERVAL_SECONDS=300
+# Maximum logs to keep per route/function (default: 2000)
+LOG_MAX_PER_ROUTE=2000
