--- a/deno.json
+++ b/deno.json
@@ -9,6 +9,7 @@
     "@std/expect": "jsr:@std/expect",
     "@std/testing": "jsr:@std/testing",
     "@db/sqlite": "jsr:@db/sqlite",
+    "@soapbox/kysely-deno-sqlite": "jsr:@soapbox/kysely-deno-sqlite",
     "@core/asyncutil": "jsr:@core/asyncutil",
     "better-auth": "npm:better-auth",
     "better-auth/": "npm:better-auth/"
