--- a/deno.json
+++ b/deno.json
@@ -11,7 +11,8 @@
     "@db/sqlite": "jsr:@db/sqlite",
     "@soapbox/kysely-deno-sqlite": "jsr:@soapbox/kysely-deno-sqlite",
     "@core/asyncutil": "jsr:@core/asyncutil",
-    "better-auth": "npm:better-auth",
-    "better-auth/": "npm:better-auth/"
+    "better-auth": "npm:better-auth@^1.4.10",
+    "better-auth/plugins": "npm:better-auth@^1.4.10/plugins",
+    "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access"
   }
 }
