User management and JWTs for web UI via Better Auth (#22)
* Initial Better Auth setup

* Change first user onboarding

* Fix SQL dialect issues

* Initial user management

* Unify navigation

* Use Admin plugin for roles and proper user management

* Fix linter errors

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ METRICS_RETENTION_DAYS=90
 LOG_TRIMMING_INTERVAL_SECONDS=300
 # Maximum logs to keep per route/function (default: 2000)
 LOG_MAX_PER_ROUTE=2000
+
+# Better Auth configuration
+# Secret key for signing sessions (generate a long random string for production)
+BETTER_AUTH_SECRET=dev-secret-change-in-production
+# Base URL for the application (used for redirects and callbacks)
+BETTER_AUTH_BASE_URL=http://localhost:8000
