Encryption service implementation

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 PORT=8000
 MANAGEMENT_API_KEY=your-secret-key-here
+
+# Secrets encryption key (REQUIRED)
+# All secrets are encrypted at rest using AES-256-GCM
+# Generate with: openssl rand -base64 32
+# WARNING: Losing this key means all secrets are unrecoverable
+SECRETS_ENCRYPTION_KEY=
+
 # Log level: debug, info, warn, error, none (default: info)
 LOG_LEVEL=info
 # Metrics aggregation interval in seconds (default: 60)
