--- a/deno.json
+++ b/deno.json
@@ -13,6 +13,11 @@
     "@core/asyncutil": "jsr:@core/asyncutil",
     "better-auth": "npm:better-auth@^1.4.10",
     "better-auth/plugins": "npm:better-auth@^1.4.10/plugins",
-    "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access"
+    "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access",
+  },
+  "lint": {
+    "exclude": [
+      "code/"
+    ]
   }
 }
