Include secrets encryption key in PR checks GH Action

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -18,6 +18,8 @@ jobs:
           deno-version: v2.x
 
       - name: Run tests
+        env:
+          SECRETS_ENCRYPTION_KEY: dGVzdC1rZXktZm9yLWNpLXBpcGVsaW5lLTMyYnl0ZXM=
         run: deno task test
 
   build:
