--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=8000
 MANAGEMENT_API_KEY=your-secret-key-here
+
 # Log level: debug, info, warn, error, none (default: info)
 LOG_LEVEL=info
 # Metrics aggregation interval in seconds (default: 60)
@@ -12,7 +13,12 @@ LOG_TRIMMING_INTERVAL_SECONDS=300
 LOG_MAX_PER_ROUTE=2000
 
 # Better Auth configuration
-# Secret key for signing sessions (generate a long random string for production)
-BETTER_AUTH_SECRET=dev-secret-change-in-production
 # Base URL for the application (used for redirects and callbacks)
 BETTER_AUTH_BASE_URL=http://localhost:8000
+
+# Encryption Key Rotation (optional)
+# Encryption keys are auto-generated on first startup and stored in ./data/encryption-keys.json
+# KEY_ROTATION_CHECK_INTERVAL_SECONDS=10800  # How often to check if rotation is needed (default: 3 hours)
+# KEY_ROTATION_INTERVAL_DAYS=90               # Days between automatic key rotations (default: 90)
+# KEY_ROTATION_BATCH_SIZE=100                 # Records to re-encrypt per batch (default: 100)
+# KEY_ROTATION_BATCH_SLEEP_MS=100             # Sleep between batches in ms (default: 100)
