--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --env-file=.env --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi main.ts",
-    "test": "deno test --env-file=.env --allow-net --allow-env --allow-read --allow-write --allow-ffi"
+    "test": "deno test --env-file=.env --allow-net --allow-env --allow-read --allow-write --allow-ffi --allow-run"
   },
   "imports": {
     "@hono/hono": "jsr:@hono/hono",
@@ -13,6 +13,11 @@
     "@core/asyncutil": "jsr:@core/asyncutil",
     "better-auth": "npm:better-auth@^1.4.10",
     "better-auth/plugins": "npm:better-auth@^1.4.10/plugins",
-    "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access"
+    "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access",
+  },
+  "lint": {
+    "exclude": [
+      "code/"
+    ]
   }
 }
