Make BETTER_AUTH_BASE_URL optional
This is in preparation for moving it into settings.

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,11 @@ LOG_TRIMMING_INTERVAL_SECONDS=300
 # Maximum logs to keep per route/function (default: 2000)
 LOG_MAX_PER_ROUTE=2000
 
-# Better Auth configuration
-# Base URL for the application (used for redirects and callbacks)
-BETTER_AUTH_BASE_URL=http://localhost:8000
+# Better Auth configuration (optional)
+# Base URL for the application - used for OAuth redirects and callbacks
+# If not set, auto-detects from incoming request headers (Host, X-Forwarded-*)
+# Set this when behind a reverse proxy or when auto-detection is unreliable
+# BETTER_AUTH_BASE_URL=http://localhost:8000
 
 # Encryption Key Rotation (optional)
 # Encryption keys are auto-generated on first startup and stored in ./data/encryption-keys.json
