Management key env removal

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 PORT=8000
-MANAGEMENT_API_KEY=your-secret-key-here
 
 # Better Auth configuration (optional)
 # Base URL for the application - used for OAuth redirects and callbacks
@@ -11,11 +10,21 @@ MANAGEMENT_API_KEY=your-secret-key-here
 # through the settings table. They are automatically created with defaults
 # on first startup:
 #
+# Security:
+# - api.access-groups (default: ID of "management" group)
+#   Controls which API key groups can access management endpoints.
+#   Create API keys via the web UI after initial admin setup.
+#
+# Logging:
 # - log.level (default: "info")
 # - log.trimming.interval-seconds (default: 300)
 # - log.trimming.max-per-function (default: 2000)
+#
+# Metrics:
 # - metrics.aggregation-interval-seconds (default: 60)
 # - metrics.retention-days (default: 90)
+#
+# Encryption:
 # - encryption.key-rotation.check-interval-seconds (default: 10800)
 # - encryption.key-rotation.interval-days (default: 90)
 # - encryption.key-rotation.batch-size (default: 100)
