Configuration via settings page (#27)
* Make BETTER_AUTH_BASE_URL optional

This is in preparation for moving it into settings.

* Settings table and service

* Implement settings page

* Management key env removal

* Test coverage for accessing API via API keys

* Fix linter issue

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,31 @@
 PORT=8000
-MANAGEMENT_API_KEY=your-secret-key-here
 
-# Log level: debug, info, warn, error, none (default: info)
-LOG_LEVEL=info
-# Metrics aggregation interval in seconds (default: 60)
-METRICS_AGGREGATION_INTERVAL_SECONDS=60
-# Number of days to retain daily metrics (default: 90)
-METRICS_RETENTION_DAYS=90
-# Log trimming interval in seconds (default: 300 = 5 minutes)
-LOG_TRIMMING_INTERVAL_SECONDS=300
-# Maximum logs to keep per route/function (default: 2000)
-LOG_MAX_PER_ROUTE=2000
+# Better Auth configuration (optional)
+# Base URL for the application - used for OAuth redirects and callbacks
+# If not set, auto-detects from incoming request headers (Host, X-Forwarded-*)
+# Set this when behind a reverse proxy or when auto-detection is unreliable
+# BETTER_AUTH_BASE_URL=http://localhost:8000
 
-# Better Auth configuration
-# Base URL for the application (used for redirects and callbacks)
-BETTER_AUTH_BASE_URL=http://localhost:8000
-
-# Encryption Key Rotation (optional)
-# Encryption keys are auto-generated on first startup and stored in ./data/encryption-keys.json
-# KEY_ROTATION_CHECK_INTERVAL_SECONDS=10800  # How often to check if rotation is needed (default: 3 hours)
-# KEY_ROTATION_INTERVAL_DAYS=90               # Days between automatic key rotations (default: 90)
-# KEY_ROTATION_BATCH_SIZE=100                 # Records to re-encrypt per batch (default: 100)
-# KEY_ROTATION_BATCH_SLEEP_MS=100             # Sleep between batches in ms (default: 100)
+# Note: The following settings are now stored in the database and configured
+# through the settings table. They are automatically created with defaults
+# on first startup:
+#
+# Security:
+# - api.access-groups (default: ID of "management" group)
+#   Controls which API key groups can access management endpoints.
+#   Create API keys via the web UI after initial admin setup.
+#
+# Logging:
+# - log.level (default: "info")
+# - log.trimming.interval-seconds (default: 300)
+# - log.trimming.max-per-function (default: 2000)
+#
+# Metrics:
+# - metrics.aggregation-interval-seconds (default: 60)
+# - metrics.retention-days (default: 90)
+#
+# Encryption:
+# - encryption.key-rotation.check-interval-seconds (default: 10800)
+# - encryption.key-rotation.interval-days (default: 90)
+# - encryption.key-rotation.batch-size (default: 100)
+# - encryption.key-rotation.batch-sleep-ms (default: 100)
