--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,31 +4,17 @@ services:
     image: xkonti/crude-functions:latest
     ports:
       - 8000:8000
-    environment:
-      # Management API key for admin access (Web UI and API)
-      - MANAGEMENT_API_KEY=your-secret-key-here
-
-      # Log level: debug, info, warn, error, none (default: info)
-      - LOG_LEVEL=info
-
-      # Metrics configuration
-      - METRICS_AGGREGATION_INTERVAL_SECONDS=60  # Default: 60
-      - METRICS_RETENTION_DAYS=90                # Default: 90
-
-      # Log trimming configuration
-      - LOG_TRIMMING_INTERVAL_SECONDS=300        # Default: 300 (5 minutes)
-      - LOG_MAX_PER_ROUTE=2000                   # Default: 2000
-
-      # Better Auth configuration
-      # Base URL for the application (used for redirects and callbacks)
-      - BETTER_AUTH_BASE_URL=http://localhost:8000
-
-      # Encryption Key Rotation (optional - defaults shown below)
-      # Encryption keys are auto-generated on first startup and stored in ./data/encryption-keys.json
-      # - KEY_ROTATION_CHECK_INTERVAL_SECONDS=10800  # Default: 10800 (3 hours)
-      # - KEY_ROTATION_INTERVAL_DAYS=90              # Default: 90
-      # - KEY_ROTATION_BATCH_SIZE=100                # Default: 100
-      # - KEY_ROTATION_BATCH_SLEEP_MS=100            # Default: 100
+    # Environment variables (optional)
+    # environment:
+    #   # Better Auth configuration
+    #   # Auto-detects from request headers if not set
+    #   # Set explicitly when behind reverse proxy: https://your-domain.com
+    #   - BETTER_AUTH_BASE_URL=http://localhost:8000
+    #
+    # Note: All settings (log level, metrics, encryption, API access groups)
+    # are configured via the web UI Settings page and stored in the database.
+    # On first run, create an admin user via the web UI setup page,
+    # then manage API keys through the API Keys page.
     volumes:
       # Mount the data directory for SQLite database and encryption keys
       - ./data:/app/data
