--- a/deno.json
+++ b/deno.json
@@ -5,8 +5,10 @@
   },
   "imports": {
     "@hono/hono": "jsr:@hono/hono",
+    "@std/assert": "jsr:@std/assert@^1.0.16",
     "@std/dotenv": "jsr:@std/dotenv",
     "@std/expect": "jsr:@std/expect",
+    "@std/path": "jsr:@std/path@^1.1.4",
     "@std/testing": "jsr:@std/testing",
     "@db/sqlite": "jsr:@db/sqlite",
     "@soapbox/kysely-deno-sqlite": "jsr:@soapbox/kysely-deno-sqlite",
