--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,14 @@
 {
   "tasks": {
-    "dev": "deno run --env-file=.env --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi main.ts",
+    "dev": "deno run --env-file=.env --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi --allow-run main.ts",
     "test": "deno test --env-file=.env --allow-net --allow-env --allow-read --allow-write --allow-ffi --allow-run"
   },
   "imports": {
     "@hono/hono": "jsr:@hono/hono",
+    "@std/assert": "jsr:@std/assert@^1.0.16",
     "@std/dotenv": "jsr:@std/dotenv",
     "@std/expect": "jsr:@std/expect",
+    "@std/path": "jsr:@std/path@^1.1.4",
     "@std/testing": "jsr:@std/testing",
     "@db/sqlite": "jsr:@db/sqlite",
     "@soapbox/kysely-deno-sqlite": "jsr:@soapbox/kysely-deno-sqlite",
