--- a/deno.json
+++ b/deno.json
@@ -13,6 +13,7 @@
     "@db/sqlite": "jsr:@db/sqlite",
     "@soapbox/kysely-deno-sqlite": "jsr:@soapbox/kysely-deno-sqlite",
     "@core/asyncutil": "jsr:@core/asyncutil",
+    "@da/bcrypt": "jsr:@da/bcrypt@1.0.1",
     "better-auth": "npm:better-auth@^1.4.10",
     "better-auth/plugins": "npm:better-auth@^1.4.10/plugins",
     "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access",
