--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,10 @@
     "test": "deno test --env-file=.env --allow-net --allow-env --allow-read --allow-write --allow-ffi --allow-run"
   },
   "imports": {
-    "@hono/hono": "jsr:@hono/hono",
+    "@hono/hono": "npm:hono@^4.6.15",
+    "@hono/swagger-ui": "npm:@hono/swagger-ui@^0.4.1",
+    "@hono/zod-openapi": "npm:@hono/zod-openapi@^0.16.4",
+    "hono": "npm:hono@^4.6.15",
     "@std/assert": "jsr:@std/assert@^1.0.16",
     "@std/dotenv": "jsr:@std/dotenv",
     "@std/expect": "jsr:@std/expect",
@@ -17,6 +20,7 @@
     "better-auth": "npm:better-auth@^1.4.10",
     "better-auth/plugins": "npm:better-auth@^1.4.10/plugins",
     "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access",
+    "zod": "npm:zod@^3.24.1"
   },
   "lint": {
     "exclude": [
