--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,7 +28,14 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Log in to DHI Registry
+        uses: docker/login-action@v3
+        with:
+          registry: dhi.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract metadata for standard image
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -39,13 +46,36 @@ jobs:
             type=semver,pattern={{major}}
             type=raw,value=latest
 
-      - name: Build and push Docker image
+      - name: Extract metadata for hardened image
+        id: meta-hardened
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}},suffix=-hardened
+            type=semver,pattern={{major}}.{{minor}},suffix=-hardened
+            type=semver,pattern={{major}},suffix=-hardened
+            type=raw,value=hardened
+
+      - name: Build and push standard image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build and push hardened image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          build-args: BASE_IMAGE=dhi.io/deno:2
+          tags: ${{ steps.meta-hardened.outputs.tags }}
+          labels: ${{ steps.meta-hardened.outputs.labels }}
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
