--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -56,6 +56,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}},suffix=-hardened
             type=semver,pattern={{major}},suffix=-hardened
             type=raw,value=hardened
+            type=raw,value=latest-hardened
 
       - name: Build and push standard image
         uses: docker/build-push-action@v6
@@ -65,8 +66,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=standard
+          cache-to: type=gha,mode=max,scope=standard
 
       - name: Build and push hardened image
         uses: docker/build-push-action@v6
@@ -77,5 +78,5 @@ jobs:
           tags: ${{ steps.meta-hardened.outputs.tags }}
           labels: ${{ steps.meta-hardened.outputs.labels }}
           platforms: linux/amd64,linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=hardened
+          cache-to: type=gha,mode=max,scope=hardened
