--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,33 +9,17 @@ env:
   IMAGE_NAME: xkonti/crude-functions
 
 jobs:
-  build-and-push:
+  build-standard:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Log in to DHI Registry
-        uses: docker/login-action@v3
-        with:
-          registry: dhi.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Extract metadata for standard image
+      - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -46,19 +30,7 @@ jobs:
             type=semver,pattern={{major}}
             type=raw,value=latest
 
-      - name: Extract metadata for hardened image
-        id: meta-hardened
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.IMAGE_NAME }}
-          tags: |
-            type=semver,pattern={{version}},suffix=-hardened
-            type=semver,pattern={{major}}.{{minor}},suffix=-hardened
-            type=semver,pattern={{major}},suffix=-hardened
-            type=raw,value=hardened
-            type=raw,value=latest-hardened
-
-      - name: Build and push standard image
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -70,14 +42,41 @@ jobs:
           cache-from: type=gha,scope=standard
           cache-to: type=gha,mode=max,scope=standard
 
-      - name: Build and push hardened image
+  build-hardened:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/login-action@v3
+        with:
+          registry: dhi.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}},suffix=-hardened
+            type=semver,pattern={{major}}.{{minor}},suffix=-hardened
+            type=semver,pattern={{major}},suffix=-hardened
+            type=raw,value=hardened
+            type=raw,value=latest-hardened
+
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           build-args: BASE_IMAGE=dhi.io/deno:2
-          tags: ${{ steps.meta-hardened.outputs.tags }}
-          labels: ${{ steps.meta-hardened.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha,scope=hardened
           cache-to: type=gha,mode=max,scope=hardened
