BETTER_AUTH_BASE_URL -> AUTH_BASE_URL

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 PORT=8000
 
-# Better Auth configuration (optional)
+# Authentication configuration (optional)
 # Base URL for the application - used for OAuth redirects and callbacks
 # If not set, auto-detects from incoming request headers (Host, X-Forwarded-*)
 # Set this when behind a reverse proxy or when auto-detection is unreliable
-# BETTER_AUTH_BASE_URL=http://localhost:8000
+# AUTH_BASE_URL=http://localhost:8000
 
 # Note: The following settings are now stored in the database and configured
 # through the settings table. They are automatically created with defaults
