--- a/deno.json
+++ b/deno.json
@@ -18,9 +18,16 @@
     "better-auth/plugins": "npm:better-auth@^1.4.10/plugins",
     "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access",
   },
+  "test": {
+    "exclude": [
+      "code/",
+      "docs/"
+    ]
+  },
   "lint": {
     "exclude": [
-      "code/"
+      "code/",
+      "docs/"
     ]
   }
 }
