Separate ports for functions and management

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
-PORT=8000
+# Function execution port (deployed handlers)
+FUNCTION_PORT=8000
+
+# Management port (API, Web UI, Auth)
+MANAGEMENT_PORT=9000
 
 # Authentication configuration (optional)
 # Base URL for the application - used for OAuth redirects and callbacks
 # If not set, auto-detects from incoming request headers (Host, X-Forwarded-*)
 # Set this when behind a reverse proxy or when auto-detection is unreliable
-# AUTH_BASE_URL=http://localhost:8000
+# AUTH_BASE_URL=http://localhost:9000
 
 # Note: The following settings are now stored in the database and configured
 # through the settings table. They are automatically created with defaults
