--- a/deno.json
+++ b/deno.json
@@ -17,7 +17,8 @@
     "better-auth": "npm:better-auth@^1.4.10",
     "better-auth/plugins": "npm:better-auth@^1.4.10/plugins",
     "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access",
-    "isomorphic-git": "npm:isomorphic-git@^1.27.2"
+    "isomorphic-git": "npm:isomorphic-git@^1.27.2",
+    "surrealdb": "npm:surrealdb@alpha"
   },
   "test": {
     "exclude": [
