SurrealDB migration prep (#96)
* PoC for embedding SurrealDB

* Initial surreadb service with migrations

* Make tests work

* Simplify connections

* Remove the unnecessary SURREAL_ENABLED

* Add basic settings table

* Update the testing skill

* Update settings to use SurrealDB

* Better connection pooling

* Default ns and db names

* Clean up a bit, make properly async

* Add reset task for quick data directory cleanup during dev

* Fix linting issues

* Fix test issues

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,16 @@ MANAGEMENT_PORT=9000
 # If not set, auto-detects from incoming request headers (Host, X-Forwarded-*)
 # Set this when behind a reverse proxy or when auto-detection is unreliable
 # AUTH_BASE_URL=http://localhost:9000
+
+# SurrealDB configuration (experimental)
+# Internal port for SurrealDB server (not exposed externally)
+SURREAL_PORT=5173
+# Storage path for SurrealKV persistent data
+SURREAL_STORAGE=./data/surreal
+# Path to SurrealDB binary (use "surreal" for local dev, "/surreal" for Docker)
+SURREAL_BINARY=surreal
+# Root credentials for SurrealDB
+SURREAL_USER=root
+SURREAL_PASS=root
+# Run SurrealDB experiment on startup (for verification)
+# RUN_SURREAL_EXPERIMENT=true
