--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,12 @@ SURREAL_USER=root
 SURREAL_PASS=root
 # Run SurrealDB experiment on startup (for verification)
 # RUN_SURREAL_EXPERIMENT=true
+
+# Test infrastructure configuration (for deno task test)
+# Port for shared SurrealDB test instance (default: 54321)
+# SURREAL_TEST_PORT=54321
+# Credentials for test SurrealDB (default: root/root)
+# SURREAL_TEST_USER=root
+# SURREAL_TEST_PASS=root
+# Connection timeout for detecting external instance (ms, default: 1000)
+# SURREAL_TEST_TIMEOUT=1000
