--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "tasks": {
     "setup": "deno run --allow-read --allow-write --allow-env --allow-run --allow-net scripts/setup-surreal.ts",
-    "dev": "deno task setup && deno run --env-file=.env --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi --allow-run main.ts",
+    "build:vendor": "deno run -A scripts/build-codemirror.ts",
+    "dev": "deno task setup && deno task build:vendor && deno run --env-file=.env --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi --allow-run main.ts",
     "test": "deno run -A scripts/run-tests.ts",
     "reset": "rm -rf data && mkdir data"
   },
