--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "tasks": {
     "setup": "deno run --allow-read --allow-write --allow-env --allow-run --allow-net scripts/setup-surreal.ts",
-    "dev": "deno task setup && deno run --env-file=.env --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi --allow-run main.ts",
+    "build:vendor": "deno run -A scripts/build-codemirror.ts",
+    "dev": "deno task setup && deno task build:vendor && deno run --env-file=.env --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi --allow-run main.ts",
     "test": "deno run -A scripts/run-tests.ts",
     "reset": "rm -rf data && mkdir data"
   },
@@ -18,7 +19,9 @@
     "better-auth/plugins": "npm:better-auth@^1.4.10/plugins",
     "better-auth/plugins/access": "npm:better-auth@^1.4.10/plugins/access",
     "isomorphic-git": "npm:isomorphic-git@^1.27.2",
-    "surrealdb": "npm:surrealdb@alpha"
+    "surrealdb": "npm:surrealdb@alpha",
+    "esbuild": "npm:esbuild@0.24.0",
+    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@0.11.0"
   },
   "test": {
     "exclude": [
